syntax = "proto3";

package grpcdemo;

option java_multiple_files = true;
option java_package = "dev.appkr.grpcdemo";
option java_outer_classname = "Hello";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
